--- a/HermesProxy/HermesProxy.config
+++ b/HermesProxy/HermesProxy.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <appSettings>
-    <!--
+	<appSettings>
+		<!--
             Option:      ClientBuild
             Description: The version of the client you will play with.
             Default:     "40618" (1.14.0)
@@ -10,104 +10,109 @@
                          "40892" (2.5.2)
                          "42328" (2.5.3)
     -->
-    <add key="ClientBuild" value="40618" />
-    <!--
+		<add key="ClientBuild" value="40618" />
+		<!--
             Option:      ClientSeed
             Description: The auth seed of the client you will play with.
             Default:     "179D3DC3235629D07113A9B3867F97A7" (static)
     -->
-    <add key="ClientSeed" value="179D3DC3235629D07113A9B3867F97A7" />
-    <!--
+		<add key="ClientSeed" value="179D3DC3235629D07113A9B3867F97A7" />
+		<!--
             Option:      ServerBuild
             Description: The version of the server you want to connect to.
             Default:     "auto" will choose best version based on ClientBuild
                          "5875" (1.12.1)
                          "8606" (2.4.3)
     -->
-    <add key="ServerBuild" value="auto" />
-    <!--
+		<add key="ServerBuild" value="auto" />
+		<!--
             Option:      ServerAddress
             Description: The address of the server you want to connect to.
                          aka. what you use in "SET REALMLIST <ip>"
             Default:     "127.0.0.1" (localhost)
     -->
-    <add key="ServerAddress" value="127.0.0.1" />
-    <!--
+		<add key="ServerAddress" value="127.0.0.1" />
+		<!--
             Option:      ServerPort
             Description: The port to reach the server you want to connect to.
             Default:     "3724"
     -->
-    <add key="ServerPort" value="3724" />
-    <!--
+		<add key="ServerPort" value="3724" />
+		<!--
             Option:      ReportedOS
             Description: The OS identifier that will be sent to the remote server.
             Default:     "OSX"
     -->
-    <add key="ReportedOS" value="OSX" />
-    <!--
+		<add key="ReportedOS" value="OSX" />
+		<!--
             Option:      ReportedPlatform
             Description: The platform identifier that will be sent to the remote server.
             Default:     "x86"
     -->
-    <add key="ReportedPlatform" value="x86" />
-    <!--
+		<add key="ReportedPlatform" value="x86" />
+		<!--
             Option:      ExternalAddress
             Description: Your real IP address on which others can connect.
             Default:     "127.0.0.1" (localhost)
     -->
-    <add key="ExternalAddress" value="127.0.0.1" />
-    <!--
+		<add key="ExternalAddress" value="127.0.0.1" />
+		<!--
             Option:      RestPort
             Description: The port on which the REST server will listen.
             Default:     "8081"
     -->
-    <add key="RestPort" value="8081" />
-    <!--
+		<add key="RestPort" value="8081" />
+		<!--
             Option:      BNetPort
             Description: The port on which the BNet(/Portal) server will listen.
                          This is the port that you have to use in your Config.wtf file.
             Default:     "1119"
     -->
-    <add key="BNetPort" value="1119" />
-    <!--
+		<add key="BNetPort" value="1119" />
+		<!--
             Option:      RealmPort
             Description: The port on which the Realm server will listen.
             Default:     "8084"
     -->
-    <add key="RealmPort" value="8084" />
-    <!--
+		<add key="RealmPort" value="8084" />
+		<!--
             Option:      InstancePort
             Description: The port on which the Instance server will listen.
             Default:     "8086"
     -->
-    <add key="InstancePort" value="8086" />
-    <!--
+		<add key="InstancePort" value="8086" />
+		<!--
             Option:      DebugOutput
             Description: Print additional information in console.
             Default:     "false"
     -->
-    <add key="DebugOutput" value="false" />
-    <!--
+		<add key="DebugOutput" value="false" />
+		<!--
             Option:      PacketsLog
             Description: Save each session's packets to a single file in PacketsLog directory.
             Default:     "true"
     -->
-    <add key="PacketsLog" value="true" />
-    <!--
+		<add key="PacketsLog" value="true" />
+		<!--
             Option:      ServerSpellDelay
             Description: The amount of spell delay for Proxy <=> ModernClient in milliseconds (0 = disabled).
                          If you experience "stuck" spell animations/sounds try values above 0. (Like 20)
                          Warning: Adding a delay might cause you to lose optimal DPS.
             Default:     "15"
     -->
-    <add key="ServerSpellDelay" value="15" />
-    <!--
+		<add key="ServerSpellDelay" value="15" />
+		<!--
             Option:      ClientSpellDelay
             Description: The amount of spell delay for GameServer <=> Proxy in milliseconds (0 = disabled).
                          If you experience "stuck" spell animations/sounds try values above 0. (Like 20)
                          Warning: Adding a delay might cause you to lose optimal DPS.
             Default:     "15"
     -->
-    <add key="ClientSpellDelay" value="15" />
-  </appSettings>
+		<add key="ClientSpellDelay" value="15" />
+
+		<!--
+        新加配置，AccountData的文件夹路径。为空就还是放在原来的位置
+    -->
+		<add key="AccountDataDir" value="" />
+	</appSettings>
 </configuration>
