Add BuildSeed for 3.4.3
thanks to https://talk.trinitycore.org/t/cata-master-and-wotlk-classic-not-supported/33317?utm_source=chatgpt.com

--- a/HermesProxy/HermesProxy.config
+++ b/HermesProxy/HermesProxy.config
@@ -26,7 +26,7 @@
                          "8606" (2.4.3)
 						 "12340" (3.3.5a)
     -->
-    <add key="ServerBuild" value="12340" />
+    <add key="ServerBuild" value="auto" />
     <!--
             Option:      ServerAddress
             Description: The address of the server you want to connect to.
