--- a/HermesProxy/HermesProxy.csproj
+++ b/HermesProxy/HermesProxy.csproj
@@ -63,4 +63,8 @@
       <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
     </Content>
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="World\Server\Time\" />
+  </ItemGroup>
 </Project>
